fixed scrollbar & proportions

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@
 header {
     width: 100%;
     height: 80px;
-    background-color: #080b12;
+    background-color: rgba(0,0,0,0.4);
     position: fixed;
 }
 
@@ -57,8 +57,9 @@ header {
 /* MAIN */
 
 main {
-    padding-top: 85px;
-    height: calc(100% - 180px);
+    height: calc(100vh - 100px);
+    overflow-y: scroll;
+    padding-top: 80px;
 }
 
 /* FOOTER */
